# SearchEngine

./: .gitignore  CMakeLists.txt  README.md
header/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
json_files/: answers.json  config.json  requests.json
nlohmann_json/: CMakeLists.txt
resources/: file1.txt  file10.txt  file11.txt  file12.txt  file3.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  script  words.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  InvertedIndexTest.cpp  SearchServerTest.cpp  test.cpp
